fixed viewport on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   min-height: 100dvh;
   margin: 0 auto;
   text-align: center;
+  background-color: #1c1917;
 }
 
 .app-container {
